working on create method

--- a/Cat99/app/views/cats/new.html.erb
+++ b/Cat99/app/views/cats/new.html.erb
@@ -10,9 +10,13 @@
 
     <select name="cat[color]">
         <option disabled selected>Option</option>
-        <option >Option</option>
-        <option value="<% COLORS[0] %>"><%COLORS[0]%></option>
-        <option value="<% COLORS[1] %>"><%COLORS[1]%></option>
+        <option value=white>white</option>
+        <option value="<% Cat::COLORS[1] %>"><%=Cat::COLORS[1]%></option>
+        <option value="<% Cat::COLORS[2] %>"><%=Cat::COLORS[2]%></option>
+        <option value="<% Cat::COLORS[3] %>"><%=Cat::COLORS[3]%></option>
+        <option value="<% Cat::COLORS[4] %>"><%=Cat::COLORS[4]%></option>
+        <option value="<% Cat::COLORS[5] %>"><%=Cat::COLORS[5]%></option>
+        
 
     </select>
 
